--- a/frontend/src/global.scss
+++ b/frontend/src/global.scss
@@ -1,18 +1,39 @@
+// *,
+// *::before,
+// *::after {
+//   padding: 0;
+//   margin: 0;
+//   box-sizing: border-box;
+//   font-family: Arial, Helvetica, sans-serif;
+// }
+// a {
+//   text-decoration: none;
+// }
+// ul {
+//   list-style: none;
+// }
+// .wrapper {
+//   width: 100%;
+//   padding: 3rem;
+// }
+
 *,
 *::before,
 *::after {
-  padding: 0;
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
 }
-a {
-  text-decoration: none;
+
+html {
+  font-size: 16px;
 }
+
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1rem;
+}
+
 ul {
   list-style: none;
-}
-.wrapper {
-  width: 100%;
-  padding: 3rem;
 }
