--- a/frontend/src/pages/EditJob/EditJob.scss
+++ b/frontend/src/pages/EditJob/EditJob.scss
@@ -1,91 +1,91 @@
-@import "../../mixins";
+// @import "../../mixins";
 
-.edit-job {
-  @include main-style();
+// .edit-job {
+//   @include main-style();
 
-  .edit-job {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 50px auto;
-    width: 80%;
-  }
+//   .edit-job {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     margin: 50px auto;
+//     width: 80%;
+//   }
 
-  h2 {
-    font-size: 36px;
-    margin-bottom: 50px;
-  }
+//   h2 {
+//     font-size: 36px;
+//     margin-bottom: 50px;
+//   }
 
-  form {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-  }
+//   form {
+//     display: flex;
+//     flex-direction: column;
+//     width: 100%;
+//   }
 
-  .form-group {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 30px;
-    width: 100%;
-  }
+//   .form-group {
+//     display: flex;
+//     flex-direction: column;
+//     margin-bottom: 30px;
+//     width: 100%;
+//   }
 
-  label {
-    font-size: 20px;
-    margin-bottom: 10px;
-  }
+//   label {
+//     font-size: 20px;
+//     margin-bottom: 10px;
+//   }
 
-  input {
-    padding: 10px;
-    font-size: 16px;
-    border: none;
-    border-radius: 5px;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
-  }
+//   input {
+//     padding: 10px;
+//     font-size: 16px;
+//     border: none;
+//     border-radius: 5px;
+//     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+//   }
 
-  input:focus {
-    outline: none;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
-  }
+//   input:focus {
+//     outline: none;
+//     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
+//   }
 
-  .btn-group {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 50px;
-    width: 100%;
-  }
+//   .btn-group {
+//     display: flex;
+//     justify-content: space-between;
+//     margin-top: 50px;
+//     width: 100%;
+//   }
 
-  button {
-    padding: 10px 30px;
-    font-size: 20px;
-    font-weight: bold;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
+//   button {
+//     padding: 10px 30px;
+//     font-size: 20px;
+//     font-weight: bold;
+//     border: none;
+//     border-radius: 5px;
+//     cursor: pointer;
+//   }
 
-  button:hover {
-    opacity: 0.8;
-  }
+//   button:hover {
+//     opacity: 0.8;
+//   }
 
-  button:active {
-    transform: translateY(2px);
-  }
+//   button:active {
+//     transform: translateY(2px);
+//   }
 
-  .primary {
-    background-color: #007bff;
-    color: #fff;
-  }
+//   .primary {
+//     background-color: #007bff;
+//     color: #fff;
+//   }
 
-  .primary:hover {
-    background-color: #0062cc;
-  }
+//   .primary:hover {
+//     background-color: #0062cc;
+//   }
 
-  .secondary {
-    background-color: #dc3545;
-    color: #fff;
-  }
+//   .secondary {
+//     background-color: #dc3545;
+//     color: #fff;
+//   }
 
-  .secondary:hover {
-    background-color: #c82333;
-  }
-}
+//   .secondary:hover {
+//     background-color: #c82333;
+//   }
+// }
