I worked on frontend

--- a/frontend/src/pages/ChangePassword/ChangePassword.scss
+++ b/frontend/src/pages/ChangePassword/ChangePassword.scss
@@ -1,9 +1,9 @@
 @import "../../mixins";
 
-.edit-job {
+.change-password {
   @include main-style();
 
-  .edit-job {
+  .change-password {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -88,5 +88,4 @@
   .secondary:hover {
     background-color: #c82333;
   }
-  
 }
