--- a/frontend/src/pages/Employee/Employee.scss
+++ b/frontend/src/pages/Employee/Employee.scss
@@ -1,12 +1,11 @@
 @import "../../mixins";
 
-.Jobs {
+.employee {
   @include main-style();
   h1 {
     font-size: 2rem;
     margin-bottom: 1rem;
   }
-
   .table-wrapper {
     width: 100%;
     overflow-x: auto;
