--- a/frontend/src/global.scss
+++ b/frontend/src/global.scss
@@ -20,20 +20,20 @@
 *,
 *::before,
 *::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 html {
-  font-size: 16px;
+    font-size: 16px;
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 1rem;
+    font-family: "Open Sans", sans-serif;
+    font-size: 1rem;
 }
 
 ul {
-  list-style: none;
+    list-style: none;
 }
