--- a/frontend/src/pages/EditEmployee/EditEmployee.scss
+++ b/frontend/src/pages/EditEmployee/EditEmployee.scss
@@ -14,12 +14,6 @@
     margin-top: 0.25rem;
   }
 
-  .checkbox {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    margin-top: 1rem;
-  }
 
   nav {
     display: flex;
@@ -55,9 +49,9 @@
     width: 100%;
     padding: 0.65rem 0.5rem;
     font-size: 1rem;
-    color: white;
+    color: black;
     border: 2px solid #4a5568;
-    background-color: #2d3748;
+    background-color: #e1e5ec;
     border-radius: 10px;
     outline: none;
   }
