Added Date Picker and Some Updates

--- a/frontend/src/pages/AddJob/AddJob.scss
+++ b/frontend/src/pages/AddJob/AddJob.scss
@@ -1,47 +1,68 @@
 @import "../../mixins";
 
 .add-job {
-  @include main-style();
-  background-color: #F1F6F9;
-  color: blue($color: #000000);
-  padding: 20px;
-  border-radius: 10px;
+    @include main-style();
+    background-color: #f1f6f9;
+    color: blue($color: #000000);
+    padding: 20px;
+    border-radius: 10px;
+    .date-picker-container {
+        display: flex;
+        align-items: center;
+        margin-top: 20px;
 
-  .add-job h2 {
-    margin-bottom: 20px;
-  }
+        label {
+            margin-right: 10px;
+            font-weight: bold;
+        }
 
-  .add-job .MuiFormControl-root {
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
+        .date-picker {
+            font-size: 16px;
 
-  .add-job .MuiInputLabel-root,
-  .add-job .MuiInputBase-root {
-    color: #fff;
-  }
+            &:focus {
+                outline: none;
+                border-color: #4d90fe;
+                box-shadow: 0 0 3px #4d90fe;
+            }
+        }
+    }
+    .add-job h2 {
+        margin-bottom: 20px;
+    }
 
-  .add-job .MuiOutlinedInput-root .MuiOutlinedInput-notchedOutline {
-    border-color: #fff;
-  }
+    .add-job .MuiFormControl-root {
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
 
-  .add-job .MuiOutlinedInput-root:hover .MuiOutlinedInput-notchedOutline {
-    border-color: #fff;
-  }
+    .add-job .MuiInputLabel-root,
+    .add-job .MuiInputBase-root {
+        color: #fff;
+    }
 
-  .add-job .MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline {
-    border-color: #fff;
-  }
+    .add-job .MuiOutlinedInput-root .MuiOutlinedInput-notchedOutline {
+        border-color: #fff;
+    }
 
-  .add-job .MuiButton-root {
-    margin-top: 20px;
-    margin-right: 10px;
-    color: #fff;
-    border-color: #fff;
-  }
+    .add-job .MuiOutlinedInput-root:hover .MuiOutlinedInput-notchedOutline {
+        border-color: #fff;
+    }
 
-  .add-job .MuiButton-root:hover {
-    background-color: #fff;
-    color: #1d1d1d;
-  }
+    .add-job
+        .MuiOutlinedInput-root.Mui-focused
+        .MuiOutlinedInput-notchedOutline {
+        border-color: #fff;
+    }
+
+    .add-job .MuiButton-root {
+        margin-top: 20px;
+        margin-right: 10px;
+        color: #fff;
+        border-color: #fff;
+    }
+
+    .add-job .MuiButton-root:hover {
+        background-color: #fff;
+        color: #1d1d1d;
+    }
 }
