--- a/frontend/src/pages/EditJob/EditJob.scss
+++ b/frontend/src/pages/EditJob/EditJob.scss
@@ -1,92 +1,110 @@
 @import "../../mixins";
 
+
+
 .edit-job {
-  @include main-style();
+      @include main-style();
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 50px auto;
+        width: 80%;
+    }
+    .date-picker-container {
+        display: flex;
+        align-items: center;
+        margin-top: 20px;
 
-  .edit-job {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 50px auto;
-    width: 80%;
-  }
+        label {
+            margin-right: 10px;
+            font-weight: bold;
+        }
 
-  h2 {
-    font-size: 36px;
-    margin-bottom: 50px;
-  }
+        .date-picker {
+            font-size: 16px;
 
-  form {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-  }
+            &:focus {
+                outline: none;
+                border-color: #4d90fe;
+                box-shadow: 0 0 3px #4d90fe;
+            }
+        }
+    }
+    h2 {
+        font-size: 36px;
+        margin-bottom: 50px;
+    }
 
-  .form-group {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 30px;
-    width: 100%;
-  }
+    form {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
 
-  label {
-    font-size: 16px;
-    margin-bottom: 10px;
-  }
+    .form-group {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 30px;
+        width: 100%;
+    }
 
-  input {
-    padding: 10px;
-    font-size: 16px;
-    border: none;
-    border-radius: 5px;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
-  }
+    label {
+        font-size: 16px;
+        margin-bottom: 10px;
+    }
 
-  input:focus {
-    outline: none;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
-  }
+    input {
+        padding: 10px;
+        font-size: 16px;
+        border: none;
+        border-radius: 5px;
+        box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+    }
 
-  .btn-group {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 50px;
-    width: 100%;
-  }
+    input:focus {
+        outline: none;
+        box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
+    }
 
-  button {
-    padding: 10px 30px;
-    font-size: 20px;
-    font-weight: bold;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
+    .btn-group {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 50px;
+        width: 100%;
+    }
 
-  button:hover {
-    opacity: 0.8;
-  }
+    button {
+        padding: 10px 30px;
+        font-size: 20px;
+        font-weight: bold;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
 
-  button:active {
-    transform: translateY(2px);
-  }
+    button:hover {
+        opacity: 0.8;
+    }
 
-  .primary {
-    background-color: #007bff;
-    color: #fff;
-  }
+    button:active {
+        transform: translateY(2px);
+    }
 
-  .primary:hover {
-    background-color: #0062cc;
-  }
+    .primary {
+        background-color: #007bff;
+        color: #fff;
+    }
 
-  .secondary {
-    background-color: #dc3545;
-    color: #fff;
-  }
+    .primary:hover {
+        background-color: #0062cc;
+    }
 
-  .secondary:hover {
-    background-color: #c82333;
-  }
-  
-}
+    .secondary {
+        background-color: #dc3545;
+        color: #fff;
+    }
+
+    .secondary:hover {
+        background-color: #c82333;
+    }
+
